--- a/nyangdangback/build.gradle
+++ b/nyangdangback/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
 // 스프링 시큐리티
     implementation 'org.springframework.boot:spring-boot-starter-security'
+
+    //s3사용
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
 tasks.named('test') {
